Added 64 bit version

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ Playground/Playground.VC.opendb
 Playground/Playground.sdf
 Playground/Playground/Debug
 Playground/Playground/Release
+Playground/x64
+Playground/Playground/x64
