--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Playground/Playground/Playground.vcxproj
 Playground/Playground/Playground.vcxproj.filters
 Playground/Playground/bin32/Playground.iobj
 Playground/Playground/bin32/Playground.ipdb
+Playground/Playground.VC.db
