Added .vs folder to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Playground/Playground/Playground.vcxproj.filters
 Playground/Playground/bin32/Playground.iobj
 Playground/Playground/bin32/Playground.ipdb
 Playground/Playground.VC.db
+Playground/.vs
