--- a/Playground/Playground/Playground.vcxproj.filters
+++ b/Playground/Playground/Playground.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClCompile Include="source\GridNavigationComponent.cpp">
       <Filter>Source Files\Components</Filter>
     </ClCompile>
+    <ClCompile Include="source\GridSavingComponent.cpp">
+      <Filter>Source Files\Components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\World.h">
@@ -119,6 +122,9 @@
       <Filter>Header Files\GameObjects</Filter>
     </ClInclude>
     <ClInclude Include="source\GridNavigationComponent.h">
+      <Filter>Header Files\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="source\GridSavingComponent.h">
       <Filter>Header Files\Components</Filter>
     </ClInclude>
   </ItemGroup>
