--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Playground/Playground/bin32/Playground.iobj
 Playground/Playground/bin32/Playground.ipdb
 Playground/Playground.VC.db
 Playground/.vs
+Playground/Playground.VC.VC.opendb
