--- a/Playground/Playground/Playground.vcxproj.filters
+++ b/Playground/Playground/Playground.vcxproj.filters
@@ -80,6 +80,9 @@
     <ClCompile Include="source\GridSavingComponent.cpp">
       <Filter>Source Files\Components</Filter>
     </ClCompile>
+    <ClCompile Include="source\GridEditorComponent.cpp">
+      <Filter>Source Files\Components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\World.h">
@@ -125,6 +128,9 @@
       <Filter>Header Files\Components</Filter>
     </ClInclude>
     <ClInclude Include="source\GridSavingComponent.h">
+      <Filter>Header Files\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="source\GridEditorComponent.h">
       <Filter>Header Files\Components</Filter>
     </ClInclude>
   </ItemGroup>
