--- a/Playground/Playground/Playground.vcxproj.filters
+++ b/Playground/Playground/Playground.vcxproj.filters
@@ -110,6 +110,9 @@
     <ClCompile Include="source\CollisionSystem.cpp">
       <Filter>Source Files\World</Filter>
     </ClCompile>
+    <ClCompile Include="source\ConvexCollisionComponent.cpp">
+      <Filter>Source Files\Components\Collision</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\Includes.h">
@@ -183,6 +186,9 @@
     </ClInclude>
     <ClInclude Include="source\CollisionSystem.h">
       <Filter>Header Files\World</Filter>
+    </ClInclude>
+    <ClInclude Include="source\ConvexCollisionComponent.h">
+      <Filter>Header Files\Components\Collision</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
