Small changes to JPS

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Playground/Playground/bin32/Playground.ipdb
 Playground/Playground.VC.db
 Playground/.vs
 Playground/Playground.VC.VC.opendb
+Playground/Playground160812(1).vsp
